[Ready for EngSys Review] ESRP Publishing (#3187)
> [!WARNING]  
> SERVICE OWNERS: no need to review this PR. I'm making engsys changes
to ci.yml files.

Really fixes https://github.com/Azure/azure-sdk-for-rust/issues/3035

[keeping as draft to avoid notifying everyone]

A new release crate-packing strategy for Rust which uses `cargo publish
--dry-run` to produce the crates:

```
cargo publish --dry-run --package <package1> --package <package2> ...
```

This uses existing tooling to do the build with no vendoring or separate
packing. Release order sorting can be read from the tool output and
doesn't need to be computed from metadata. `cargo publish` also verifies
that dependencies defined in the package's `Cargo.toml` are published
and fails if they are not published.


This also supports the current Pre-GA approach of not incrementing
core's versions after release as the workspace dependency includes

For example: 

If a package depends on `azure_core@0.30.0` and there is no
`azure_core@0.30.0` published on crates.io, the command will fail. It's
possible to "atomically" generate packages for releases with unreleased
dependencies if those dependencies are included in the package command
(e.g. `storage_blobs` depending on `storage_common`)

## Formatting: 

Formatting attempts to match reasonable outputs. Redirecting stderr from
`cargo publish` would normally result in red console text. The `cargo
publish` command is also grouped:
https://dev.azure.com/azure-sdk/public/_build/results?buildId=5461494&view=logs&j=b766ebde-1fdb-5f11-1350-46ddc53b23cf&t=7ef29fa0-f532-5653-3473-16dc04608431&l=104

<img width="678" height="188" alt="image"
src="https://github.com/user-attachments/assets/33156db7-4567-4259-b69b-eb1720089ea5"
/>


## Tests: 

| Scenario | Expected Outcome | Links | 
| -------- | ---------------- | ---- |
| Release azure_canary w/o required azure_canary_core (intra-service
dependency) | Fail |
https://dev.azure.com/azure-sdk/internal/_build/results?buildId=54

--- a/eng/pipelines/templates/jobs/pack.yml
+++ b/eng/pipelines/templates/jobs/pack.yml
@@ -55,15 +55,52 @@ jobs:
       ServiceDirectory: ${{ parameters.ServiceDirectory }}
       PackageInfoDirectory: $(Build.ArtifactStagingDirectory)/PackageInfo
 
-  - task: Powershell@2
-    displayName: "Pack Crates"
-    condition: and(succeeded(), ne(variables['NoPackagesChanged'],'true'))
-    inputs:
-      pwsh: true
-      filePath: $(Build.SourcesDirectory)/eng/scripts/Pack-Crates.ps1
-      arguments: >
-        -OutputPath '$(Build.ArtifactStagingDirectory)'
-        -PackageInfoDirectory '$(Build.ArtifactStagingDirectory)/PackageInfo'
+  - ${{ if eq('auto', parameters.ServiceDirectory) }}:
+    - task: Powershell@2
+      displayName: Pack Crates
+      condition: and(succeeded(), ne(variables['NoPackagesChanged'],'true'))
+      inputs:
+        pwsh: true
+        filePath: $(Build.SourcesDirectory)/eng/scripts/Pack-Crates.ps1
+        arguments: >
+          -OutputPath '$(Build.ArtifactStagingDirectory)'
+          -PackageInfoDirectory '$(Build.ArtifactStagingDirectory)/PackageInfo'
+
+  - ${{ else }}:
+    - pwsh: |
+        $artifacts = '${{ convertToJson(parameters.Artifacts) }}' | ConvertFrom-Json
+        $isReleaseBuild = $true
+        $artifactsToBuild = $artifacts | Where-Object { $_.releaseInBatch -eq 'True' }
+
+        if (!$artifactsToBuild) {
+          Write-Host "No packages to release. Building all packages in the service directory with no dependency validation."
+          $artifactsToBuild = $artifacts
+          $isReleaseBuild = $false
+        }
+
+        $packageNames = $artifactsToBuild.name
+
+        Write-Host "##vso[task.setvariable variable=PackageNames]$($packageNames -join ',')"
+        if ($isReleaseBuild) {
+          Write-Host "##vso[task.setvariable variable=AdditionalPackageParams]-Release"
+        } else {
+          Write-Host "##vso[task.setvariable variable=AdditionalPackageParams]"
+        }
+      displayName: Configure crate packing
+      condition: and(succeeded(), ne(variables['NoPackagesChanged'],'true'))
+
+    - task: Powershell@2
+      displayName: Pack Crates
+      condition: and(succeeded(), ne(variables['NoPackagesChanged'],'true'))
+      inputs:
+        pwsh: true
+        filePath: $(Build.SourcesDirectory)/eng/scripts/Pack-Crates.ps1
+        arguments: >
+          -OutputPath '$(Build.ArtifactStagingDirectory)'
+          -PackageNames $(PackageNames)
+          -OutBuildOrderFile '$(Build.ArtifactStagingDirectory)/release-order.json'
+          $(AdditionalPackageParams)
+
 
   - template: /eng/common/pipelines/templates/steps/publish-1es-artifact.yml
     parameters:
