--- a/sdk/cosmos/ci.yml
+++ b/sdk/cosmos/ci.yml
@@ -10,10 +10,16 @@ trigger:
     include:
     - sdk/cosmos/
 
+parameters:
+- name: release_azure_data_cosmos
+  displayName: azure_data_cosmos
+  type: boolean
+  default: false
+
 extends:
   template: /eng/pipelines/templates/stages/archetype-sdk-client.yml
   parameters:
     ServiceDirectory: cosmos
     Artifacts:
     - name: azure_data_cosmos
-      safeName: AzureDataCosmos
+      releaseInBatch: ${{ parameters.release_azure_data_cosmos }}
