Re-export serde_json::Value from core
Resolves #1687. As long as we use `Value` from core, should `serde_json::Value` ever make a breaking change to `Value` we can effectively vendor just that while continuing to pick up changes to the de/serializers.

--- a/sdk/core/typespec/Cargo.toml
+++ b/sdk/core/typespec/Cargo.toml
@@ -27,7 +27,7 @@ thiserror.workspace = true
 default = ["http", "json"]
 http = []
 json = ["dep:serde", "dep:serde_json"]
-xml = ["dep:quick-xml"]
+xml = ["dep:serde", "dep:quick-xml"]
 
 [package.metadata.docs.rs]
 all-features = true
