--- a/sdk/storage/azure_storage_queue/Cargo.toml
+++ b/sdk/storage/azure_storage_queue/Cargo.toml
@@ -17,6 +17,7 @@ categories = ["api-bindings"]
 default = ["azure_core/default"]
 
 [dependencies]
+async-trait.workspace = true
 azure_core = { workspace = true, features = ["xml"] }
 serde = { workspace = true }
 
