Update Key Vault keys and certificates READMEs

--- a/sdk/keyvault/azure_security_keyvault_keys/Cargo.toml
+++ b/sdk/keyvault/azure_security_keyvault_keys/Cargo.toml
@@ -30,6 +30,7 @@ azure_core_test = { workspace = true, features = [
 azure_identity.workspace = true
 azure_security_keyvault_test = { path = "../azure_security_keyvault_test" }
 criterion.workspace = true
+include-file.workspace = true
 rand.workspace = true
 reqwest.workspace = true
 sha2.workspace = true
