Re-record tests and override rand::random
Had to trick cryptographic operations to use a recorded seed.

--- a/sdk/keyvault/azure_security_keyvault_keys/Cargo.toml
+++ b/sdk/keyvault/azure_security_keyvault_keys/Cargo.toml
@@ -32,6 +32,7 @@ azure_security_keyvault_test = { path = "../azure_security_keyvault_test" }
 criterion.workspace = true
 include-file.workspace = true
 rand.workspace = true
+rand_chacha.workspace = true
 reqwest.workspace = true
 sha2.workspace = true
 tokio.workspace = true
