Adding cargo dependency to root cargo toml.

--- a/sdk/cosmos/azure_data_cosmos/Cargo.toml
+++ b/sdk/cosmos/azure_data_cosmos/Cargo.toml
@@ -21,7 +21,7 @@ serde_json.workspace = true
 serde.workspace = true
 tracing.workspace = true
 url.workspace = true
-moka = { version = "0.12", features = ["future"] }
+moka.workspace = true
 
 [dev-dependencies]
 azure_identity.workspace = true
