Eliminating locking and improve safety with Pagers, Pollers
Resolves #3294

--- a/sdk/keyvault/azure_security_keyvault_keys/Cargo.toml
+++ b/sdk/keyvault/azure_security_keyvault_keys/Cargo.toml
@@ -36,6 +36,7 @@ rand_chacha.workspace = true
 reqwest.workspace = true
 sha2.workspace = true
 tokio.workspace = true
+tracing.workspace = true
 
 [build-dependencies]
 rustc_version.workspace = true
