--- a/sdk/keyvault/azure_security_keyvault_certificates/Cargo.toml
+++ b/sdk/keyvault/azure_security_keyvault_certificates/Cargo.toml
@@ -35,6 +35,7 @@ include-file.workspace = true
 openssl.workspace = true
 rand.workspace = true
 tokio.workspace = true
+tracing.workspace = true
 
 [build-dependencies]
 rustc_version.workspace = true
