--- a/eng/pipelines/templates/jobs/ci.tests.yml
+++ b/eng/pipelines/templates/jobs/ci.tests.yml
@@ -50,7 +50,7 @@ jobs:
       Toolchain: $(RustToolchainName)
 
   - template: /eng/pipelines/templates/steps/vcpkg.yml
-  
+
   - template: /eng/common/pipelines/templates/steps/set-default-branch.yml@self
 
   - template: /eng/common/pipelines/templates/steps/save-package-properties.yml@self
@@ -61,7 +61,16 @@ jobs:
   - ${{ if eq(parameters.TestProxy, true) }}:
     - template: /eng/common/testproxy/test-proxy-standalone-tool.yml
 
-  - task: Powershell@2
+  - task: PowerShell@2
+    displayName: Check SemVer compatibility
+    condition: and(succeeded(), ne(variables['NoPackagesChanged'],'true'))
+    inputs:
+      pwsh: true
+      filePath: $(Build.SourcesDirectory)/eng/scripts/Test-Semver.ps1
+      arguments: >
+        -PackageInfoDirectory '$(Build.ArtifactStagingDirectory)/PackageInfo'
+
+  - task: PowerShell@2
     displayName: "Test Packages"
     condition: and(succeeded(), ne(variables['NoPackagesChanged'],'true'))
     timeoutInMinutes: ${{ parameters.TimeoutInMinutes }}
