--- a/eng/pipelines/templates/jobs/ci.tests.yml
+++ b/eng/pipelines/templates/jobs/ci.tests.yml
@@ -60,7 +60,12 @@ jobs:
 
   - task: PowerShell@2
     displayName: Check SemVer compatibility
-    condition: and(succeeded(), ne(variables['NoPackagesChanged'],'true'))
+    condition: >-
+      and(
+        succeeded(),
+        ne(variables['NoPackagesChanged'],'true'),
+        eq(variables['RustToolchainName'], 'stable')
+      )
     inputs:
       pwsh: true
       filePath: $(Build.SourcesDirectory)/eng/scripts/Test-Semver.ps1
