--- a/eng/pipelines/templates/jobs/ci.yml
+++ b/eng/pipelines/templates/jobs/ci.yml
@@ -32,6 +32,10 @@ jobs:
     Toolchain: stable
     TimeoutInMinutes: ${{ parameters.TestTimeoutInMinutes }}
 
+- template: /eng/pipelines/templates/jobs/semver.yml
+  parameters:
+    ServiceDirectory: ${{ parameters.ServiceDirectory }}
+
 - template: /eng/common/pipelines/templates/jobs/generate-job-matrix.yml
   parameters:
     JobTemplatePath: /eng/pipelines/templates/jobs/ci.tests.yml
