--- a/eng/pipelines/templates/jobs/ci.tests.yml
+++ b/eng/pipelines/templates/jobs/ci.tests.yml
@@ -50,7 +50,7 @@ jobs:
       Toolchain: $(RustToolchainName)
 
   - template: /eng/pipelines/templates/steps/vcpkg.yml
-
+  
   - template: /eng/common/pipelines/templates/steps/set-default-branch.yml@self
 
   - template: /eng/common/pipelines/templates/steps/save-package-properties.yml@self
@@ -61,7 +61,7 @@ jobs:
   - ${{ if eq(parameters.TestProxy, true) }}:
     - template: /eng/common/testproxy/test-proxy-standalone-tool.yml
 
-  - task: PowerShell@2
+  - task: Powershell@2
     displayName: "Test Packages"
     condition: and(succeeded(), ne(variables['NoPackagesChanged'],'true'))
     timeoutInMinutes: ${{ parameters.TimeoutInMinutes }}
