Set publishing=true in servicebus Cargo.toml

--- a/sdk/servicebus/azure_messaging_servicebus/Cargo.toml
+++ b/sdk/servicebus/azure_messaging_servicebus/Cargo.toml
@@ -14,7 +14,7 @@ documentation = "https://docs.rs/azure_messaging_servicebus"
 keywords = ["sdk", "azure", "messaging", "cloud", "servicebus"]
 categories = ["api-bindings"]
 edition.workspace = true
-publish = false
+publish = true
 
 [dependencies]
 async-lock.workspace = true
