--- a/sdk/servicebus/azure_messaging_servicebus/Cargo.toml
+++ b/sdk/servicebus/azure_messaging_servicebus/Cargo.toml
@@ -14,6 +14,7 @@ documentation = "https://docs.rs/azure_messaging_servicebus"
 keywords = ["sdk", "azure", "messaging", "cloud", "servicebus"]
 categories = ["api-bindings"]
 edition.workspace = true
+publish = false
 
 [dependencies]
 async-lock.workspace = true
