Add cargo-audit to build (also track in cgmanifest.json)

--- a/eng/cgmanifest.json
+++ b/eng/cgmanifest.json
@@ -8,6 +8,13 @@
         "cargo": { "name": "cargo-semver-checks", "version": "0.45.0" }
       },
       "developmentDependency": true
+    },
+    {
+      "component": {
+        "type": "cargo",
+        "cargo": { "name": "cargo-audit", "version": "0.22.0" }
+      },
+      "developmentDependency": true
     }
   ]
 }
