Key Vault clients discover auth parameters

--- a/sdk/keyvault/azure_security_keyvault_certificates/Cargo.toml
+++ b/sdk/keyvault/azure_security_keyvault_certificates/Cargo.toml
@@ -17,6 +17,7 @@ categories = ["api-bindings"]
 default = ["azure_core/default"]
 
 [dependencies]
+async-lock = { workspace = true }
 async-trait = { workspace = true }
 azure_core = { workspace = true }
 futures = { workspace = true }
