--- a/eng/pipelines/templates/jobs/analyze.yml
+++ b/eng/pipelines/templates/jobs/analyze.yml
@@ -43,6 +43,9 @@ jobs:
         -Toolchain 'nightly'
         -SkipPackageAnalysis:('$(NoPackagesChanged)' -eq 'true')
         -Deny
+    env:
+      # Some commands like cargo-audit produce verbose logs
+      RUST_LOG: info
 
   - template: /eng/common/pipelines/templates/steps/check-spelling.yml
     parameters:
