get emulator tests running even without AZURE_TEST_MODE

--- a/sdk/cosmos/azure_data_cosmos/Cargo.toml
+++ b/sdk/cosmos/azure_data_cosmos/Cargo.toml
@@ -14,6 +14,7 @@ keywords = ["sdk", "azure", "rest", "cloud", "cosmos"]
 categories = ["api-bindings"]
 
 [dependencies]
+uuid.workspace = true
 async-trait.workspace = true
 azure_core.workspace = true
 futures.workspace = true
