--- a/sdk/storage/azure_storage_blob_test/Cargo.toml
+++ b/sdk/storage/azure_storage_blob_test/Cargo.toml
@@ -14,9 +14,12 @@ categories = ["development-tools"]
 publish = false
 
 [dependencies]
+async-trait.workspace = true
 azure_core = { workspace = true, features = ["xml"] }
 azure_core_test.workspace = true
 azure_storage_blob.path = "../azure_storage_blob"
+bytes.workspace = true
+futures.workspace = true
 tokio = { workspace = true, features = ["rt"] }
 
 [lints]
