--- a/sdk/cosmos/ci.yml
+++ b/sdk/cosmos/ci.yml
@@ -10,6 +10,18 @@ trigger:
     include:
     - sdk/cosmos/
 
+pr:
+  branches:
+    include:
+      - main
+      - feature/*
+      - feature/cosmos/spark30
+      - hotfix/*
+      - release/*
+  paths:
+    include:
+      - sdk/cosmos/
+
 parameters:
 - name: release_azure_data_cosmos
   displayName: azure_data_cosmos
@@ -17,7 +29,7 @@ parameters:
   default: false
 
 extends:
-  template: /eng/pipelines/templates/stages/archetype-sdk-client.yml
+  template: /eng/pipelines/templates/stages/cosmos-sdk-client.yml
   parameters:
     ServiceDirectory: cosmos
     Artifacts:
