--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# cSpell:ignore envrc
+
 # Build output.
 target/
 
@@ -7,6 +9,7 @@ Cargo.lock
 
 # User secrets.
 .env
+.envrc
 
 # Test artifacts.
 .assets/
