test improvements and pkg-config

--- a/sdk/cosmos/azure_data_cosmos_native/CMakeLists.txt
+++ b/sdk/cosmos/azure_data_cosmos_native/CMakeLists.txt
@@ -1,4 +1,4 @@
-# cSpell:ignore cosmosctest CRATETYPES endforeach
+# cSpell:ignore cosmosctest CRATETYPES endforeach pkgconfig libdir includedir
 
 cmake_minimum_required(VERSION 4.1)
 
@@ -10,6 +10,12 @@ option(BUILD_SHARED_LIBS "Build using shared libraries" ON)
 include(FetchContent)
 include(CTest)
 
+# Set output directories
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/test)
+set(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR}/dist)
+
 FetchContent_Declare(
     Corrosion
     GIT_REPOSITORY https://github.com/corrosion-rs/corrosion.git
@@ -19,19 +25,50 @@ FetchContent_MakeAvailable(Corrosion)
 
 corrosion_import_crate(
     MANIFEST_PATH ./Cargo.toml
-    PROFILE dev
 )
 
-set(TEST_FILES
-    ./c_tests/version.c
-    ./c_tests/item_crud.c
-    ./c_tests/context_memory_management.c
-    ./c_tests/error_handling.c)
+# Copy header file to build/include directory
+file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/include)
+configure_file(
+    ${CMAKE_SOURCE_DIR}/include/azurecosmos.h
+    ${CMAKE_BINARY_DIR}/include/azurecosmos.h
+    COPYONLY
+)
 
+# Generate pkg-config file
+set(PKG_CONFIG_NAME "azurecosmos")
+set(PKG_CONFIG_DESCRIPTION "Azure Cosmos DB C API")
+set(PKG_CONFIG_VERSION "0.1.0")
+set(PKG_CONFIG_LIBS "-L\${libdir} -lazurecosmos")
+set(PKG_CONFIG_CFLAGS "-I\${includedir}")
+
+configure_file(
+    ${CMAKE_SOURCE_DIR}/azurecosmos.pc.in
+    ${CMAKE_BINARY_DIR}/azurecosmos.pc
+    @ONLY
+)
+
+# Auto-discover test files
+file(GLOB TEST_FILES ./c_tests/*.c)
+
+# Build test executables
 foreach(test_file ${TEST_FILES})
     get_filename_component(test_name ${test_file} NAME_WE)
     add_executable(${test_name} ${test_file})
     target_link_libraries(${test_name} PRIVATE azurecosmos)
-    add_test(${test_name} ${test_name})
 endforeach()
 
+# Run test discovery after build and trigger reconfiguration
+add_custom_target(discover_tests ALL
+    COMMAND ${CMAKE_COMMAND} 
+        -DTEST_DIR=${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
+        -DCMAKE_CURRENT_BINARY_DIR=${CMAKE_CURRENT_BINARY_DIR}
+        -P ${CMAKE_CURRENT_SOURCE_DIR}/cmake/DiscoverTests.cmake
+    COMMAND ${CMAKE_COMMAND} ${CMAKE_CURRENT_SOURCE_DIR}
+    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+    DEPENDS ${TEST_FILES}
+    COMMENT "Discovering all tests and reconfiguring..."
+)
+
+# Include discovered tests (will be populated after first build)
+include(${CMAKE_CURRENT_BINARY_DIR}/DiscoveredTests.cmake OPTIONAL)
