--- a/sdk/cosmos/azure_data_cosmos_native/Cargo.toml
+++ b/sdk/cosmos/azure_data_cosmos_native/Cargo.toml
@@ -14,6 +14,7 @@ name = "azurecosmos"
 crate-type = ["cdylib", "staticlib"]
 
 [dependencies]
+reqwest = { workspace = true, optional = true }
 futures.workspace = true
 serde_json = { workspace = true, features = ["raw_value"] }
 azure_core.workspace = true
@@ -31,7 +32,7 @@ tokio = { workspace = true, optional = true, features = ["rt-multi-thread", "mac
 [features]
 default = ["tokio", "reqwest", "reqwest_native_tls", "tracing"]
 tokio = ["dep:tokio"]
-reqwest = ["azure_core/reqwest"]
+reqwest = ["dep:reqwest", "azure_core/reqwest"]
 reqwest_native_tls = ["azure_core/reqwest_native_tls"]
 tracing = ["dep:tracing-subscriber"]
 
