--- a/sdk/cosmos/azure_data_cosmos/Cargo.toml
+++ b/sdk/cosmos/azure_data_cosmos/Cargo.toml
@@ -22,7 +22,7 @@ serde.workspace = true
 tracing.workspace = true
 url.workspace = true
 moka.workspace = true
-async-lock = "3.0.0"
+async-lock.workspace = true
 
 [dev-dependencies]
 uuid.workspace = true
