--- a/sdk/storage/azure_storage_blob/Cargo.toml
+++ b/sdk/storage/azure_storage_blob/Cargo.toml
@@ -15,6 +15,7 @@ categories = ["api-bindings"]
 
 [features]
 default = ["azure_core/default"]
+azurite = ["azure_core/hmac_rust"]
 
 [dependencies]
 async-trait.workspace = true
