--- a/sdk/identity/azure_identity/Cargo.toml
+++ b/sdk/identity/azure_identity/Cargo.toml
@@ -20,6 +20,7 @@ futures.workspace = true
 openssl = { workspace = true, optional = true }
 pin-project.workspace = true
 serde.workspace = true
+serde_json.workspace = true
 time.workspace = true
 tokio = { workspace = true, optional = true }
 tracing.workspace = true
