--- a/sdk/cosmos/azure_data_cosmos/Cargo.toml
+++ b/sdk/cosmos/azure_data_cosmos/Cargo.toml
@@ -21,7 +21,7 @@ serde_json.workspace = true
 serde.workspace = true
 tracing.workspace = true
 url.workspace = true
-moka.workspace = true
+async-lock.workspace = true
 
 [dev-dependencies]
 uuid.workspace = true
