--- a/sdk/cosmos/ci.yml
+++ b/sdk/cosmos/ci.yml
@@ -15,6 +15,10 @@ parameters:
   displayName: azure_data_cosmos
   type: boolean
   default: false
+- name: release_azure_data_cosmos_native
+  displayName: azure_data_cosmos_native
+  type: boolean
+  default: false
 
 extends:
   template: /eng/pipelines/templates/stages/archetype-sdk-client.yml
@@ -23,3 +27,5 @@ extends:
     Artifacts:
     - name: azure_data_cosmos
       releaseInBatch: ${{ parameters.release_azure_data_cosmos }}
+    - name: azure_data_cosmos_native
+      releaseInBatch: ${{ parameters.release_azure_data_cosmos_native }}
