Initial C Bindings for Cosmos DB SDK for Rust (#3347)
This PR introduces C language bindings (FFI) for the `azure_data_cosmos`
Rust SDK, enabling C/C++ applications to interact with Azure Cosmos DB.

### Key Changes

**New `azure_data_cosmos_native` Package:**
- Complete C API with FFI layer exposing core Cosmos DB operations
(originally developed by a partner team)
- Runtime and call context management for async/sync bridging. The
Runtime Context defines the threads on which async operations will run,
and the Call Context provides a place for call-specific reporting of
error details. This is based on the pattern found in the [AMQP
package](https://github.com/Azure/azure-sdk-for-cpp/blob/main/sdk/core/azure-core-amqp/src/impl/rust_amqp/rust_amqp/rust_wrapper/src/call_context.rs)
for C++
- Comprehensive error handling with optional detailed error information
- CRUD operations for databases, containers, and items
- Connection string support

**C Tests:**
- Shared test infrastructure (`test_common.h`) with automatic test
discovery
- Basic tests of item/container/database CRUD.
- Integration with CMake/CTest

**Build System:**
- CMake build configuration with organized output directories
- `cbindgen` integration for automatic header generation
- pkg-config file generation for library integration
- Cross-platform support (Linux, macOS, Windows)

Closes #3444

--- a/sdk/cosmos/azure_data_cosmos_native/Cargo.toml
+++ b/sdk/cosmos/azure_data_cosmos_native/Cargo.toml
@@ -14,7 +14,29 @@ name = "azurecosmos"
 crate-type = ["cdylib", "staticlib"]
 
 [dependencies]
-azure_data_cosmos = { path = "../azure_data_cosmos" }
+reqwest = { workspace = true, optional = true }
+futures.workspace = true
+serde_json = { workspace = true, features = ["raw_value"] }
+azure_core.workspace = true
+azure_data_cosmos = { path = "../azure_data_cosmos", features = [ "key_auth", "preview_query_engine" ] }
+tracing.workspace = true
+tracing-subscriber = { workspace = true, optional = true, features = ["fmt", "env-filter"] }
+
+[target.'cfg(target_family = "wasm")'.dependencies]
+# Configure dependencies in the tree to work in wasm environments
+tokio = { workspace = true, optional = true, features = ["rt", "macros"] }
+uuid = { workspace = true, features = ["v4", "js"] }
+getrandom = { workspace = true, features = ["wasm_js"] }
+
+[target.'cfg(not(target_family = "wasm"))'.dependencies]
+tokio = { workspace = true, optional = true, features = ["rt-multi-thread", "macros"] }
+
+[features]
+default = ["tokio", "reqwest", "reqwest_native_tls", "tracing"]
+tokio = ["dep:tokio"]
+reqwest = ["dep:reqwest", "azure_core/reqwest"]
+reqwest_native_tls = ["azure_core/reqwest_native_tls"]
+tracing = ["dep:tracing-subscriber"]
 
 [build-dependencies]
 cbindgen = "0.29.0"
